updated Nav scss to allow for overflow if nav items take up more space than screena allows. fixed profile link to bottom left.

--- a/packages/terra-consumer-nav/src/Nav.scss
+++ b/packages/terra-consumer-nav/src/Nav.scss
@@ -8,8 +8,9 @@
 
   .nav {
     left: 0;
+    max-height: 100vh;
     min-height: 100vh;
-    overflow-y: hidden;
+    overflow-y: scroll;
     position: relative;
     width: $terra-consumer--nav-container-width;
   }
