--- a/packages/terra-consumer-nav/src/components/nav-profile/NavProfile.scss
+++ b/packages/terra-consumer-nav/src/components/nav-profile/NavProfile.scss
@@ -1,9 +1,10 @@
 :local {
   .profile {
+    background: inherit;
     bottom: 0;
     height: auto;
     left: 0;
-    position: absolute;
+    position: fixed;
     text-align: left;
     width: inherit;
   }
